# MyRenderEngine

./: CMakeLists.txt  ddraw.lib
Render/: Render.opensdf  Render.sdf  Render.sln
Render/Debug/: Render.ilk
Render/Render/: Render.vcxproj  Render.vcxproj.filters  Renderer.pro  camera.cpp  camera.h  draw.cpp  draw.h  draw_qt.cpp  draw_qt.h  draw_windows.cpp  draw_windows.h  gamecontroller.cpp  gamecontroller.h  globaldef.h  light.cpp  light.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  math.cpp  math.h  math3d.cpp  math3d.h  poly.cpp  poly.h  resource.cpp  resource.h  resource.qrc  sample1cpp.cpp
Render/Render/Debug/: vc120.idb  vc140.idb
Render/Render/Debug/Render.tlog/: CL.read.1.tlog  CL.write.1.tlog  Render.lastbuildstate  cl.command.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
